--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <div class="grid">
                     <div class="card">
                         <img src="https://play-lh.googleusercontent.com/pmSUjgHvyOXOast5EQt-Bmc9YGB__tPL_aH8SQB2nwkP32GvSq0GlOlThfDWfa8TdVbU=w256" alt="ChatGPT" class="custom-img">
-                        <h4>ChatGPT</h4>
+                        <h4><a href="https://chatgpt.com/" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">ChatGPT</a></h4>
                         <p>🧠開發商：OpenAI</p>
                         <p>👍特點：創意寫作能力強</p>
                         <p>💔缺點：容易天馬行空及失去上下文語意</p>
@@ -405,21 +405,21 @@
                     </div>
                     <div class="card">
                         <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/8b/15/ca/8b15ca05-4388-fcab-f6c3-3c9c7b5291b9/AppIcon-0-1x_U007epad-0-0-0-8-0-0-0-85-220-0.png/460x0w.webp" alt="Gemini" class="custom-img">
-                        <h4>Gemini</h4>
+                        <h4><a href="https://gemini.google.com/" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">Gemini</a></h4>
                         <p>🧠開發商：Google</p>
                         <p>👍特點：搜尋功能強大、結合Google產品</p>
                         <p>💔缺點：iOS 版本功能尚未齊全</p>
                     </div>
                     <div class="card">
                         <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/29/00/a5/2900a5f6-74e9-9841-98ba-ef900f046c48/AppIcon_Production-0-1x_U007epad-0-4-85-220-0.png/460x0w.webp" alt="Copilot" class="custom-img">
-                        <h4>Copilot</h4>
+                        <h4><a href="https://www.copilot.microsoft.com/" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">Copilot</a></h4>
                         <p>🧠開發商：Microsoft</p>
                         <p>👍特點：微軟產品整合提升生產力</p>
                         <p>💔缺點：Win11或365訂閱才能發揮效能</p>
                     </div>
                     <div class="card">
                         <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/51/9e/d4/519ed4fa-ebc1-ec5a-4b4d-415748c74162/AppIcon-0-0-1x_U007epad-0-1-85-220.png/460x0w.webp" alt="Claude" class="custom-img">
-                        <h4>Claude</h4>
+                        <h4><a href="https://claude.ai/" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">Claude</a></h4>
                         <p>🧠開發商：Anthropic</p>
                         <p>👍特點：強調安全性與長上下文理解</p>
                         <p>💔缺點：免費額度少，中文支援較弱</p>
@@ -658,7 +658,7 @@
         <!-- Slide 12: 結語 -->
         <div class="slide">
             <div class="slide-content">
-                <h1>🎯 面對AI的心態</h1>
+                <h2>📌 面對AI的心態</h2>
                 <div class="grid">
                     <div class="card">
                         <span class="emoji">🛠️</span>
@@ -678,11 +678,28 @@
                     </div>
                 </div>
                 <div style="margin-top: 3rem;">
-                    <h2 style="color: #667eea;">AI是你的助手，絕對不會取代你。</h2>
-                    <p style="font-size: 1.5rem; color: #2c3e50; margin-top: 2rem;">謝謝聆聽！</p>
+                    <h2 style="color: #667eea;">AI是你的助手，不會取代你。</h2>                    
                 </div>
             </div>
         </div>
+
+                <!-- Slide 1: 標題頁 -->
+        <div class="slide active">
+            <div class="slide-content">
+                <h1>🌵 謝 謝 聆 聽 🌵</h1>
+                
+                <div style="margin-top: 3rem;">
+                    
+                    <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 2rem;">
+                        <span class="emoji">💃</span>
+                        <span class="emoji">🙇‍♀️</span>
+                        <span class="emoji">🕺</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 
     <div class="navigation">
