--- a/index.html
+++ b/index.html
@@ -526,21 +526,21 @@
         <!-- Slide 8: 實例3 -->
         <div class="slide">
             <div class="slide-content">
-                <h2>💰 實例3：費用分析</h2>
+                <h2>🕹️ 實例3：一鍵生成常用表格</h2>
                 <div style="text-align: left; max-width: 900px; margin: 0 auto;">
                     <div class="card">
-                        <h3>情境：分析每月費用支出，找出差異原因</h3>
+                        <h3>情境：製作每月提供員工簽名班表格</h3>
                     </div>
                     <div class="prompt-box">
 <strong>提示詞範例：</strong><br>
-你是旅店財務，請分析這份[年月A]及[年月B]的費用支出明細：<br>
-[貼上費用資料]<br><br>
-請執行：<br>
-1. 依據供應商及類別計算出兩期差異金額<br>
-2. 分析可能的差異原因<br>
-3. 將供應商及類別資料來源的編號備註出來<br>
-4. 確保兩期資料總計金額的正確性<br><br>
-格式：先用表格呈現數據，再用條列說明分析結果
+有一份EXCEL員工名單，A欄為員工編號，請將A欄有資料的範圍設定為文字<br>
+再執行：<br>
+1.A欄篩選出"10"開頭的資料、B欄篩選排除包含"支援"<br>
+2.B欄的結果是員工姓名，將其轉換成簽到表<br>
+3.樣式是姓名的下方空一格給員工簽名，員工姓名的列高與字體相同，簽名空格增加行高為40，並將資料範圍加上所有邊框<br>
+4.將員工人數平均分為2欄列式 <br>
+5.這是一份週期性作業，請提供自動生成的方式<br>
+
                     </div>
                 </div>
             </div>
