--- a/index.html
+++ b/index.html
@@ -453,15 +453,16 @@
             <div class="slide-content">
                 <h2>🔥 實用提示詞模板</h2>
                 <div style="text-align: left; max-width: 900px; margin: 0 auto;">
-                    <h3>📊 數據分析模板</h3>
+                    <h3><a href="https://gemini.google.com/u/1/app/e396b44d8565501d" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">📊 數據分析模板</a></h3>
                     <div class="prompt-box">
-你是一位[<strong>角色設定</strong>]，請分析以下[資料類型]：<br>
+你是一位[<strong>角色設定</strong>]，請分析這份[<strong>年月A</strong>]及[<strong>年月B</strong>]的費用支出明細：<br>
 [貼上資料]<br><br>
 請提供：<br>
-1. 每月的數據統整<br>
-2. 差異數標註為百分比<br>
-3. 差異原因說明<br>
-4. 以表格呈現
+1. 依據供應商(若無供應商息標示為其他)及類別計算出兩期差異金額<br>
+2. 用表格呈現數據<br>
+3. 分析可能的差異原因<br>
+4. 資料來源的編號備註出來，方便閱讀的人瞭解此資訊來自哪些編號<br>
+5. [<strong>年月A</strong>]費用總金額[<strong>數字A</strong>]，[<strong>年月B</strong>]費用總金額[<strong>數字B</strong>],確保兩期資料總計金額的正確性
                     </div>
                     <div class="warning-box">
                         <strong>❌ 避免的錯誤</strong>
@@ -481,7 +482,7 @@
                 <h2>🌏 實例1：計算各地區旅客人數</h2>
                 <div style="text-align: left; max-width: 900px; margin: 0 auto;">
                     <div class="card">
-                        <h3>情境：每月旅宿網填報的各國籍旅客人數</h3>
+                        <h3><a href="https://gemini.google.com/u/1/app/5f8c1edbbc377a2c" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">情境：每月旅宿網填報的各國籍旅客人數</a></h3>
                     </div>
                     <div class="prompt-box">
 <strong>提示詞範例：</strong><br><br>
@@ -498,7 +499,7 @@
                 <h2>📮 實例2：地址自動帶出郵遞區號</h2>
                 <div style="text-align: left; max-width: 900px; margin: 0 auto;">
                     <div class="card">
-                        <h3>情境：寄送員工扣繳憑單需要完整地址</h3>
+                        <h3><a href="https://gemini.google.com/u/1/app/1073d44411850b77" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">情境：寄送員工扣繳憑單需要完整地址</a></h3>
                     </div>
 <div class="prompt-container">
     <div class="prompt-box2">
@@ -529,7 +530,7 @@
                 <h2>🕹️ 實例3：一鍵生成常用表格</h2>
                 <div style="text-align: left; max-width: 900px; margin: 0 auto;">
                     <div class="card">
-                        <h3>情境：製作每月提供員工簽名班表格</h3>
+                        <h3><a href="https://copilot.microsoft.com/shares/PgXXSZaEPvRxEHQSjv6M3" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">情境：製作每月提供員工簽名班表格</a></h3>
                     </div>
                     <div class="prompt-box">
 <strong>提示詞範例：</strong><br>
