--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <h2>🌏 實例1：計算各地區旅客人數</h2>
                 <div style="text-align: left; max-width: 900px; margin: 0 auto;">
                     <div class="card">
-                        <h3><a href="https://gemini.google.com/u/1/app/5f8c1edbbc377a2c" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">情境：每月旅宿網填報的各國籍旅客人數</a></h3>
+                        <h3><a href="https://gemini.google.com/share/aa629cc908d3" target="_blank" style="color: black; text-decoration: none; font-weight: bold;">情境：每月旅宿網填報的各國籍旅客人數</a></h3>
                     </div>
                     <div class="prompt-box">
 <strong>提示詞範例：</strong><br><br>
